<resources>
    <string name="app_name">新华地产智慧收款</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="edit">编辑</string>
    <string name="note">笔记</string>
    <string name="new_note">新建笔记</string>
    <string name="saved">已保存</string>
    <string name="top">置顶</string>
    <string name="last_time_modify">最后编辑于</string>
    <string name="copyright">Product by LingChenJie with love</string>
    <string name="common_loading">数据加载中&#8230;</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="mvi">MVI</string>
    <string name="common">Common</string>
    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>
    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>
    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>
    <string name="common_nav_index">首页</string>
    <string name="common_nav_found">发现</string>
    <string name="common_nav_message">消息</string>
    <string name="common_nav_me">我的</string>
    <string name="loading_login">登录中&#8230;</string>
    <string name="loading_room_query">房间信息查询中&#8230;</string>
    <string name="loading_reserve_query">认筹金信息查询中&#8230;</string>
    <string name="loading_payment_query">款项信息查询中&#8230;</string>
    <string name="loading_payment_notify">缴款数据同步中&#8230;</string>
    <string name="loading_void_notify">撤销数据同步中&#8230;</string>
    <string name="loading_bill_query">票据数据查询中&#8230;</string>
    <string name="loading_pay_request">支付请求中&#8230;</string>
    <string name="loading_void_request">撤销请求中&#8230;</string>
    <string name="loading_pay_query">交易查询中&#8230;</string>
    <string name="loading_print_bill">票据打印中&#8230;</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_bill_recipient">票据领用人</string>
    <string name="login_hint_username">请输入操作员号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_ok">登录</string>
    <string name="login_please_input_correct_username_password">请输入正确账号和密码</string>
    <string name="login_hint_bill_recipient">请输入票据领用人</string>
    <string name="login_hint_bill_recipient_empty">票据领用人不能为空</string>
    <string name="login_project_choose">项目选择</string>
    <string name="logon_project_list">项目列表</string>
    <string name="main_payment">查询缴款</string>
    <string name="main_pledge_money">认筹金</string>
    <string name="main_advances_received">预收款</string>
    <string name="main_void">撤销</string>
    <string name="main_payment_synchronize">缴款信息同步</string>
    <string name="main_void_synchronize">撤销信息同步</string>
    <string name="main_print">补打印</string>
    <string name="account_manage">账户管理</string>
    <string name="account_manage_username">用户名：</string>
    <string name="account_manage_userguid">用户GUID：</string>
    <string name="account_manage_project">项目</string>
    <string name="account_manage_bill_recipient">票据领用人</string>
    <string name="account_manage_bill_recipient_modify">修改票据领用人：</string>
    <string name="account_manage_connect_set">连接设置</string>
    <string name="account_manage_connect_test">连接测试</string>
    <string name="account_manage_connect_modify_manage_pwd">修改主管密码</string>
    <string name="account_manage_logout_current_account">退出当前账户</string>
    <string name="account_manage_connect_wifi">WIFI通讯</string>
    <string name="account_manage_connect_wifi_ip">IP：</string>
    <string name="account_manage_connect_wifi_port">端口：</string>
    <string name="payment_select_query_method_title">查询缴款</string>
    <string name="payment_select_query_method">请选择查询方式</string>
    <string name="payment_select_query_method_idcard">身份证号查询</string>
    <string name="payment_select_query_method_phone">电话号码查询</string>
    <string name="payment_select_query_method_roomnum">房间号码查询</string>
    <string name="payment_payment_id_card_induction_area">请将二代身份证放置身份证感应区</string>
    <string name="payment_please_input_tel">请输入手机号码</string>
    <string name="payment_please_input_room_info">请输入房间信息</string>
    <string name="payment_bankcard">银行卡</string>
    <string name="payment_wechat">微信</string>
    <string name="payment_alipay">支付宝</string>
    <string name="payment_phone_num">电话号码：</string>
    <string name="payment_room_num">房间号码：</string>
    <string name="payment_custom_name">请输入客户姓名：</string>
    <string name="payment_select_room">选择缴款房间</string>
    <string name="payment_select_room_please">请选择缴款房间：</string>
    <string name="payment_select_payment">选择缴款款项</string>
    <string name="payment_select_payment_please">请选择缴款款项：</string>
    <string name="room_custom_name">客户名称：</string>
    <string name="room_custom_phone">客户电话：</string>
    <string name="room_custom_card_id">客户身份证号：</string>
    <string name="room_name">房间名称：</string>
    <string name="payment_title_no">序号</string>
    <string name="payment_title_type">款项类型</string>
    <string name="payment_title_name">款项名称</string>
    <string name="payment_title_total_amount">款项总额</string>
    <string name="payment_title_not_paid_amount">未缴总额</string>
    <string name="payment_title_modify">修改</string>
    <string name="modify_amount">修改金额</string>
    <string name="room_total_amount_payment">房间款项总额：</string>
    <string name="room_total_amount_paid">已缴总额：</string>
    <string name="room_total_amount_unpaid">应缴总额：</string>
    <string name="room_total_amount_payable_this_time">本次应缴：</string>
    <string name="payment_method_choice">缴款</string>
    <string name="payment_amount">缴款金额</string>
    <string name="room_total_amount_this_time">本次缴纳金额：</string>
    <string name="payment_choose_payment_method_please">请选择支付方式</string>
    <string name="payment_choose_payment_select_bank_account_please">请选择入账账号</string>
    <string name="payment_choose_select">请选择</string>
    <string name="payment_account_name">名称：</string>
    <string name="payment_account_value">账户：</string>
    <string name="payment_confirm">确认缴款</string>
    <string name="payment_result">支付结果</string>
    <string name="payment_result_pay_success">缴款成功</string>
    <string name="payment_result_pay_fail">缴款失败</string>
    <string name="payment_result_pay_timeout">缴款状态不明</string>
    <string name="payment_result_sync_success">缴款成功，同步成功</string>
    <string name="payment_result_sync_fail">缴款成功，同步失败</string>
    <string name="payment_result_this_payment_amount">本次缴纳金额：</string>
    <string name="payment_result_payment_method">支付方式：</string>
    <string name="payment_result_bank_name">入账名称：</string>
    <string name="payment_result_bank_account">入账账户：</string>
    <string name="payment_result_exit">退出</string>
    <string name="payment_result_repay">重新缴款</string>
    <string name="payment_result_sync">重新同步</string>
    <string name="payment_result_query">重新查询</string>
    <string name="reserve_select">选择缴款的预约单</string>
    <string name="reserve_select_please">请选择缴款的预约单：</string>
    <string name="reserve_project_num">项目排号：</string>
    <string name="reserve_payment_name">缴款名称：</string>
    <string name="reserve_order_number">预约单号</string>
    <string name="reserve_input_amount">输入金额</string>
    <string name="reserve_select_payment">选择缴款款项</string>
    <string name="reserve_select_payment_please">请选择缴款款项</string>
    <string name="reserve_this_payment_amount">本次缴纳金额：</string>
    <string name="payment_sync">缴款信息同步</string>
    <string name="void_title">撤销</string>
    <string name="void_manage_pwd">主管密码</string>
    <string name="void_manage_pwd_error">主管密码错误</string>
    <string name="void_manage_voucher_number">原交易凭证号：</string>
    <string name="void_choose_payment_method_please">请选择原支付方式</string>
    <string name="void_result_revoid">重新撤销</string>
    <string name="void_result_payment_method">原支付方式：</string>
    <string name="void_result_this_void_amount">本次撤销金额：</string>
    <string name="void_result">撤销结果</string>
    <string name="void_result_success">撤销成功</string>
    <string name="void_result_fail">撤销失败</string>
    <string name="void_result_timeout">撤销状态不明</string>
    <string name="void_result_sync_success">撤销成功，同步成功</string>
    <string name="void_result_sync_fail">撤销成功，同步失败</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_point">.</string>
    <string name="_back">退格</string>
    <string name="_clear">清除</string>
    <string name="_confirm">确认</string>
    <string name="print_bill">打印</string>
    <string name="print_bill_title">新华地产房屋专用收据</string>
    <string name="print_bill_title_no">NO：</string>
    <string name="print_bill_project_name">项目名称：</string>
    <string name="print_bill_room_num">房号：</string>
    <string name="print_bill_date">收款日期：</string>
    <string name="print_bill_amount">收款金额：</string>
    <string name="print_bill_paying_unit">缴款单位：</string>
    <string name="print_bill_rmb_capital">人民币（大写）：</string>
    <string name="print_bill_rmb_lower">金额小写：￥</string>
    <string name="print_bill_paying_way">缴款方式：</string>
    <string name="print_bill_paying_reason">收款事由：</string>
    <string name="print_bill_summary_notes">摘要备注：</string>
    <string name="print_bill_issuer">开票人：</string>
    <string name="print_bill_first_union_content">第一联：存根联</string>
    <string name="print_bill_second_union_content">第二联：客户联</string>
    <string name="print_bill_third_union_content">第三联：记账联</string>
    <string name="print_bill_remark">备注：</string>
    <string name="print_bill_precautions">请妥善保管，结清款项时以此换取不动产专用发票</string>
    <string name="print_bill_print_time">本次打印时间：</string>
    <string name="print_bill_first_union">第一联</string>
    <string name="print_bill_second_union">第二联</string>
    <string name="print_bill_third_union">第三联</string>
    <string name="print_bill_first_union_reprint">存根联-重打印</string>
    <string name="print_bill_second_union_reprint">客户联-重打印</string>
    <string name="print_bill_third_union_reprint">记账联-重打印</string>
    <string name="print_bill_service_connect_fail">打印服务连接失败，请重试</string>
    <string name="print_bill_data_not_found">打印数据不存在</string>
    <string name="payment_sync_no_data">没有交易需要同步</string>
    <string name="payment_sync_transaction_time">交易时间：</string>
    <string name="payment_sync_transaction_amount">缴纳金额：</string>
    <string name="payment_sync_transaction_status">交易状态：</string>
    <string name="payment_sync_transaction_status_query">缴款状态查询</string>
    <string name="payment_sync_transaction_status_sync">缴款状态同步</string>
    <string name="void_sync_voucher_number">原凭证号：</string>
    <string name="amount_symbol">￥</string>
</resources>