<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_30"
    android:gravity="center_vertical"
    app:shape_radius="@dimen/dp_5"
    app:shape_solidColor="@color/theme_color">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center_horizontal"
        android:text="@string/payment_title_no"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:text="@string/payment_title_type"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:text="@string/payment_title_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:text="@string/payment_title_total_amount"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:text="@string/payment_title_not_paid_amount"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_11"
        android:textStyle="bold" />

</com.hjq.shape.layout.ShapeLinearLayout>