<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8"
            tools:text="@string/payment_title_no" />

        <TextView
            android:id="@+id/tv_payment_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8"
            tools:text="@string/payment_title_type" />


        <TextView
            android:id="@+id/tv_payment_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8"
            tools:text="@string/payment_title_name" />


        <TextView
            android:id="@+id/tv_payment_total_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8"
            tools:text="@string/payment_title_total_amount" />

        <TextView
            android:id="@+id/tv_payment_not_paid_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8"
            tools:text="@string/payment_title_not_paid_amount" />

        <TextView
            android:id="@+id/tv_payment_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/payment_title_modify"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/gray" />

</LinearLayout>