<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical">

    <com.architecture.light.ui.view.AppTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/title_view_bg"
        app:title_text="@string/void_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="@dimen/dp_53"
            android:layout_height="@dimen/dp_53"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_112"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_result_success" />

        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/tv_result_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_17"
            android:text="@string/void_result_success"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            app:shape_textColor="#6BCC03"
            app:shape_textSelectedColor="#EF7029" />

        <TextView
            android:id="@+id/tv_fail_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_3"
            android:textColor="#EF7029"
            android:textSize="@dimen/sp_11"
            android:visibility="gone"
            tools:text="密码错误（55）" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_36"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_68"
            android:paddingEnd="@dimen/dp_67">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/void_result_this_void_amount"
                android:textColor="#666666"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/tv_this_void_amount"
                android:text="@string/amount_symbol"
                android:textColor="#162234"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/tv_this_void_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#162234"
                android:textSize="@dimen/sp_11"
                tools:text="888.88" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_68"
            android:paddingEnd="@dimen/dp_67">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/void_result_payment_method"
                android:textColor="#666666"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#162234"
                android:textSize="@dimen/sp_11"
                tools:text="银行卡" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_11"
        android:layout_marginEnd="@dimen/dp_11"
        android:layout_marginBottom="@dimen/dp_18">

        <TextView
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@drawable/selector_button_bg_round_cancel"
            android:gravity="center"
            android:text="@string/common_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bt_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@drawable/selector_button_bg_round"
            android:gravity="center"
            android:text="@string/common_confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_11"
        android:layout_marginEnd="@dimen/dp_11"
        android:layout_marginBottom="@dimen/dp_18"
        android:visibility="gone">

        <TextView
            android:id="@+id/bt_exit"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@drawable/selector_button_bg_round_cancel"
            android:gravity="center"
            android:text="@string/payment_result_exit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:visibility="visible" />

        <TextView
            android:id="@+id/bt_revoid"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@drawable/selector_button_bg_round"
            android:gravity="center"
            android:text="@string/void_result_revoid"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:visibility="visible" />

        <TextView
            android:id="@+id/bt_resynch"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@drawable/selector_button_bg_round"
            android:gravity="center"
            android:text="@string/payment_result_sync"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bt_requery"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@drawable/selector_button_bg_round"
            android:gravity="center"
            android:text="@string/payment_result_query"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>